jsoup changelog

*** Release 1.2.4 [PENDING]
 * Removed dependency on Apache Commons-lang. Jsoup now has no external dependencies.

 * Further speed optimisations for parsing and output generation.

*** Release 1.2.3 [2010-Aug-04]
 * Added support for automatic input character set detection and decoding. Jsoup now automatically detects the encoding
   character set when parsing HTML from a File or URL. The parser checks the content-type header, then the
   <meta http-equiv> or <meta charset> tag, and finally falls back to UTF-8.

 * Added ability to configure the document's output charset, to control which characters are HTML escaped, and which
   are kept intact. The output charset defaults to the document's input charset. This simplifies non-ascii output.

 * Added full support for all new HTML5 tags.

 * Added support for HTML5 dataset custom data attributes, with the Element.dataset() map.

 * Added support for the [^attributePrefix] selector query, to find elements with attributes starting with a prefix.
   Useful for finding elements with datasets: [^data-] matches <p data-name="jsoup">

 * Added support for namespaced elements (<fb:name>) and selectors to find them (fb|name)

 * Implemented Node.ownerDocument DOM method

 * Improved implicit table element handling (particularly around thead, tbody, and tfoot).

 * Improved HTML output format for empty elements and auto-detected self closing tags

 * Changed DT & DD tags to block-mode tags, to follow practice over spec

 * Added support for tag names with - and _ (<abc_foo>, <abc-foo>)

 * Handle tags with internal trailing space (<foo >)
 
 * Fixed support for character class regular expressions in [attr=~regex] selector

*** Release 1.2.2 [2010-Jul-11]
 
 * Performance optimisation:
    - core HTML parser engine now 3.5 times faster
    - HTML generator now 2.5 times faster
    - much lower memory use and garbage collection time
    