@@ -4,6 +4,9 @@ jsoup changelog
  * Removed dependency on Apache Commons-lang. Jsoup now has no external dependencies.
 
  * Further speed optimisations for parsing and output generation.
+ 
+ * Fixed support for case-sensitive HTML escape entities.
+   <http://github.com/jhy/jsoup/issues/issue/31>
 
 *** Release 1.2.3 [2010-Aug-04]
  * Added support for automatic input character set detection and decoding. Jsoup now automatically detects the encoding
